# IRT

./: .gitignore  AUTOMATIC_TEST_FIXES_GUIDE.md  CMakeLists.txt  COMPARISON_REPORT.md  COMPARISON_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  PR10_CODE_REVIEW.md  PR12_CODE_REVIEW.md  PR14_CODE_REVIEW.md  PR15_AUTOMATIC_SUMMARY.md  PR15_CODE_REVIEW.md  PR18_REVIEW.md  PR4_CODE_REVIEW.md  PR5_CODE_REVIEW.md  PR6_REVIEW_REPORT.md  PR_8_REVIEW_REPORT.md  PR_ANALYSIS_REPORT.md  README_COMPARISON.md  SUMMARY.md  TASK_COMPLETION_SUMMARY.md  TASK_SUMMARY.md  TESTING_IMPROVEMENTS.md  cmake_install.cmake  drift_ey.h5  plot.ipynb  test-boris  uniform_bz.h5
.github/workflows/: ci.yml
.ipynb_checkpoints/: CMakeLists-checkpoint.txt  Makefile-checkpoint
_codeql_build_dir/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  hybirt
_codeql_build_dir/tests/ampere/: CTestTestfile.cmake  Makefile  cmake_install.cmake  test-ampere
_codeql_build_dir/tests/boris/: CTestTestfile.cmake  Makefile  cmake_install.cmake  test-boris
notebooks/: Test-Boris-1.ipynb  uniform_bz.h5
notebooks/.ipynb_checkpoints/: Test-Boris-1-checkpoint.ipynb  Test-Faraday-checkpoint.ipynb
notebooks_plots/: Boris_plots_.ipynb  Faraday_Amp_Moments_Pop_test.ipynb  Hybirt_test_diagnostics_check.ipynb
src/: ampere.hpp  boundary_condition.hpp  faraday.hpp  field.hpp  hybirt.cpp  hybirt.cpp.bak  moments.hpp  ohm.hpp  population.hpp  pusher.hpp
src/.ipynb_checkpoints/: ampere-checkpoint.hpp  faraday-checkpoint.hpp  hybirt-checkpoint.cpp  moments-checkpoint.hpp  ohm-checkpoint.hpp  population-checkpoint.hpp  pusher-checkpoint.hpp
tests/ampere/: CMakeLists.txt  plot_ampere.ipynb  plot_tests_ampere.ipynb  test_ampere.cpp
tests/ampere/.ipynb_checkpoints/: test_ampere-checkpoint.cpp
tests/ampere_faraday/: CMakeLists.txt  test_ampere_faraday.cpp
tests/boris/: CMakeLists.txt  Plotting.ipynb  plot_Boris.ipynb  plot_tests.ipynb  test_boris.cpp
tests/faraday/: CMakeLists.txt  plot_faraday.ipynb  plot_tests_faraday.ipynb  test_faraday.cpp
tests/ion_beam/: CMakeLists.txt
tests/moments/: CMakeLists.txt  test_moments.cpp
tests/moments/.ipynb_checkpoints/: CMakeLists-checkpoint.txt  test_moments-checkpoint.cpp
tests/population/: CMakeLists.txt  test_population.cpp
tests/population_moments/: CMakeLists.txt  plot_tests_pop_mom.ipynb  test_pop_mom.cpp
tests/test_ampere/: CMakeLists.txt
tests/test_faraday/: CMakeLists.txt
tests/test_population_deposit/: CMakeLists.txt
tests/waves/: CMakeLists.txt
(+11 files in other folders)
